# bazarr-auto-translate

./: .gitignore  Dockerfile  README.md  bazarr-auto-translate.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-image.yml
