[project]
name = "bazarr-auto-translate"
version = "0.1.0"
description = "Auto-downloads and translates subtitles via Bazarr API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "requests",
    "croniter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["bazarr-auto-translate.py"]
